lib/piccard/PiUsb.h

typedef int BOOL;
// USB Twister Functions
void * __stdcall piConnectTwister(int * ErrorNumber, int SerialNum);
void __stdcall piDisconnectTwister(void * devicePtr);
int __stdcall piSetTwisterPositionZero(void * devicePtr);
int __stdcall piRunTwisterToPosition( int Position, int Velocity, void * devicePtr);
int __stdcall piRunTwisterContinuous( int Direction, int Velocity, void * devicePtr);
int __stdcall piHaltTwister(void * devicePtr);
int __stdcall piGetTwisterMovingStatus(BOOL * Moving, void * devicePtr);
int __stdcall piGetTwisterPosition(int * ReportedPosition, void * devicePtr);
int __stdcall piGetTwisterVelocity(int * ReportedVelocity, void * devicePtr);
int __stdcall piGetTwisterStatus(int * ReportedPosition, BOOL* Moving, void * devicePtr);
int __stdcall piGetTwisterSensorPosition(int* SensorPosition, void* devicePtr);
int __stdcall piGetTwisterStatusEx(int* ReportedPosition, int* SensorPosition, BOOL* Moving, void * devicePtr);
// Filter Wheel Functions
void * __stdcall piConnectFilter(int * ErrorNumber, int SerialNum);
void __stdcall piDisconnectFilter(void * devicePtr);
int __stdcall piSetFilterPosition(int Position, void * devicePtr);
int __stdcall piGetFilterPosition(int * ReportedPosition, void * devicePtr);
// Gradient Wheel Functions
void * __stdcall piConnectGWheel(int * ErrorNumber, int SerialNum);
void __stdcall piDisconnectGWheel(void * devicePtr);
int __stdcall piSetGWheelPosition(int Position, void * devicePtr);
int __stdcall piGetGWheelPosition(int * ReportedPosition, void * devicePtr);
// Relay Functions
void * __stdcall piConnectRelay(int * ErrorNumber, int SerialNum);
void __stdcall piDisconnectRelay(void * devicePtr);
int __stdcall piSetRelayStates(int RelayStates, void * devicePtr);  // Bit 0 = relay 1, Bit 1 = relay 2...etc.
int __stdcall piGetRelayStates(int * ReportedStates, void * devicePtr);