src/pi4dusb/bindings/PI4DUSBStageLibrary.java

	/**
	 * USB Twister Functions<br>
	 * Original signature : <code>void* piConnectTwister(int*, int)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:63</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static Pointer<? > piConnectTwister(Pointer<Integer > ErrorNumber, int SerialNum) {
		return Pointer.pointerToAddress(piConnectTwister(Pointer.getPeer(ErrorNumber), SerialNum));
	}
	@Convention(Convention.Style.StdCall) 
	@Ptr 
	protected native static long piConnectTwister(@Ptr long ErrorNumber, int SerialNum);
	/**
	 * Original signature : <code>void piDisconnectTwister(void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:64</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static void piDisconnectTwister(Pointer<? > devicePtr) {
		piDisconnectTwister(Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static void piDisconnectTwister(@Ptr long devicePtr);
	/**
	 * Original signature : <code>int piSetTwisterPositionZero(void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:65</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piSetTwisterPositionZero(Pointer<? > devicePtr) {
		return piSetTwisterPositionZero(Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piSetTwisterPositionZero(@Ptr long devicePtr);
	/**
	 * Original signature : <code>int piRunTwisterToPosition(int, int, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:66</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piRunTwisterToPosition(int Position, int Velocity, Pointer<? > devicePtr) {
		return piRunTwisterToPosition(Position, Velocity, Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piRunTwisterToPosition(int Position, int Velocity, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piRunTwisterContinuous(int, int, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:67</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piRunTwisterContinuous(int Direction, int Velocity, Pointer<? > devicePtr) {
		return piRunTwisterContinuous(Direction, Velocity, Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piRunTwisterContinuous(int Direction, int Velocity, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piHaltTwister(void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:68</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piHaltTwister(Pointer<? > devicePtr) {
		return piHaltTwister(Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piHaltTwister(@Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetTwisterMovingStatus(BOOL*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:69</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetTwisterMovingStatus(Pointer<Integer > Moving, Pointer<? > devicePtr) {
		return piGetTwisterMovingStatus(Pointer.getPeer(Moving), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetTwisterMovingStatus(@Ptr long Moving, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetTwisterPosition(int*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:70</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetTwisterPosition(Pointer<Integer > ReportedPosition, Pointer<? > devicePtr) {
		return piGetTwisterPosition(Pointer.getPeer(ReportedPosition), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetTwisterPosition(@Ptr long ReportedPosition, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetTwisterVelocity(int*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:71</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetTwisterVelocity(Pointer<Integer > ReportedVelocity, Pointer<? > devicePtr) {
		return piGetTwisterVelocity(Pointer.getPeer(ReportedVelocity), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetTwisterVelocity(@Ptr long ReportedVelocity, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetTwisterStatus(int*, BOOL*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:72</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetTwisterStatus(Pointer<Integer > ReportedPosition, Pointer<Integer > Moving, Pointer<? > devicePtr) {
		return piGetTwisterStatus(Pointer.getPeer(ReportedPosition), Pointer.getPeer(Moving), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetTwisterStatus(@Ptr long ReportedPosition, @Ptr long Moving, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetTwisterSensorPosition(int*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:73</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetTwisterSensorPosition(Pointer<Integer > SensorPosition, Pointer<? > devicePtr) {
		return piGetTwisterSensorPosition(Pointer.getPeer(SensorPosition), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetTwisterSensorPosition(@Ptr long SensorPosition, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetTwisterStatusEx(int*, int*, BOOL*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:74</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetTwisterStatusEx(Pointer<Integer > ReportedPosition, Pointer<Integer > SensorPosition, Pointer<Integer > Moving, Pointer<? > devicePtr) {
		return piGetTwisterStatusEx(Pointer.getPeer(ReportedPosition), Pointer.getPeer(SensorPosition), Pointer.getPeer(Moving), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetTwisterStatusEx(@Ptr long ReportedPosition, @Ptr long SensorPosition, @Ptr long Moving, @Ptr long devicePtr);
	/**
	 * Filter Wheel Functions<br>
	 * Original signature : <code>void* piConnectFilter(int*, int)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:77</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static Pointer<? > piConnectFilter(Pointer<Integer > ErrorNumber, int SerialNum) {
		return Pointer.pointerToAddress(piConnectFilter(Pointer.getPeer(ErrorNumber), SerialNum));
	}
	@Convention(Convention.Style.StdCall) 
	@Ptr 
	protected native static long piConnectFilter(@Ptr long ErrorNumber, int SerialNum);
	/**
	 * Original signature : <code>void piDisconnectFilter(void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:78</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static void piDisconnectFilter(Pointer<? > devicePtr) {
		piDisconnectFilter(Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static void piDisconnectFilter(@Ptr long devicePtr);
	/**
	 * Original signature : <code>int piSetFilterPosition(int, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:79</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piSetFilterPosition(int Position, Pointer<? > devicePtr) {
		return piSetFilterPosition(Position, Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piSetFilterPosition(int Position, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetFilterPosition(int*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:80</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetFilterPosition(Pointer<Integer > ReportedPosition, Pointer<? > devicePtr) {
		return piGetFilterPosition(Pointer.getPeer(ReportedPosition), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetFilterPosition(@Ptr long ReportedPosition, @Ptr long devicePtr);
	/**
	 * Gradient Wheel Functions<br>
	 * Original signature : <code>void* piConnectGWheel(int*, int)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:83</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static Pointer<? > piConnectGWheel(Pointer<Integer > ErrorNumber, int SerialNum) {
		return Pointer.pointerToAddress(piConnectGWheel(Pointer.getPeer(ErrorNumber), SerialNum));
	}
	@Convention(Convention.Style.StdCall) 
	@Ptr 
	protected native static long piConnectGWheel(@Ptr long ErrorNumber, int SerialNum);
	/**
	 * Original signature : <code>void piDisconnectGWheel(void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:84</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static void piDisconnectGWheel(Pointer<? > devicePtr) {
		piDisconnectGWheel(Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static void piDisconnectGWheel(@Ptr long devicePtr);
	/**
	 * Original signature : <code>int piSetGWheelPosition(int, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:85</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piSetGWheelPosition(int Position, Pointer<? > devicePtr) {
		return piSetGWheelPosition(Position, Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piSetGWheelPosition(int Position, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetGWheelPosition(int*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:86</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetGWheelPosition(Pointer<Integer > ReportedPosition, Pointer<? > devicePtr) {
		return piGetGWheelPosition(Pointer.getPeer(ReportedPosition), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetGWheelPosition(@Ptr long ReportedPosition, @Ptr long devicePtr);
	/**
	 * Relay Functions<br>
	 * Original signature : <code>void* piConnectRelay(int*, int)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:89</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static Pointer<? > piConnectRelay(Pointer<Integer > ErrorNumber, int SerialNum) {
		return Pointer.pointerToAddress(piConnectRelay(Pointer.getPeer(ErrorNumber), SerialNum));
	}
	@Convention(Convention.Style.StdCall) 
	@Ptr 
	protected native static long piConnectRelay(@Ptr long ErrorNumber, int SerialNum);
	/**
	 * Original signature : <code>void piDisconnectRelay(void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:90</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static void piDisconnectRelay(Pointer<? > devicePtr) {
		piDisconnectRelay(Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static void piDisconnectRelay(@Ptr long devicePtr);
	/**
	 * Bit 0 = relay 1, Bit 1 = relay 2...etc.<br>
	 * Original signature : <code>int piSetRelayStates(int, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:91</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piSetRelayStates(int RelayStates, Pointer<? > devicePtr) {
		return piSetRelayStates(RelayStates, Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piSetRelayStates(int RelayStates, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetRelayStates(int*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:92</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetRelayStates(Pointer<Integer > ReportedStates, Pointer<? > devicePtr) {
		return piGetRelayStates(Pointer.getPeer(ReportedStates), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetRelayStates(@Ptr long ReportedStates, @Ptr long devicePtr);
